--- a/static/html/ejercicio4.html
+++ b/static/html/ejercicio4.html
@@ -6,4 +6,9 @@
 
 <body>
     <h1>Ejercicio 4</h1>
+
+    <img src = "https://today.in-24.com/content/uploads/2021/07/24/a4148d1d1a.jpg" class="center"/>
+    <p>
+        Hoy juega Peru.
+    </p>
 </body>
